After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 675806 - Compilation of gstreamer after configure --disable-trace fails...
Compilation of gstreamer after configure --disable-trace fails...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal normal
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-05-10 13:32 UTC by Sebastian Rasmussen
Modified: 2012-05-11 11:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
git patch of proposed solution. (1.05 KB, patch)
2012-05-10 13:32 UTC, Sebastian Rasmussen
none Details | Review

Description Sebastian Rasmussen 2012-05-10 13:32:10 UTC
Created attachment 213804 [details] [review]
git patch of proposed solution.

When trying to compile the master branch of gstreamer after having
configured it using --disable-trace I get this error message:

  CC     libgstreamer_1.0_la-gstclock.lo
gst.c: In function ‘init_post’:
gst.c:638:3: error: implicit declaration of function ‘_priv_gst_alloc_trace_initialize’ [-Werror=implicit-function-declaration]
gst.c:638:3: error: nested extern declaration of ‘_priv_gst_alloc_trace_initialize’ [-Werror=nested-externs]
gst.c: In function ‘gst_deinit’:
gst.c:1014:3: error: implicit declaration of function ‘_priv_gst_alloc_trace_deinit’ [-Werror=implicit-function-declaration]
gst.c:1014:3: error: nested extern declaration of ‘_priv_gst_alloc_trace_deinit’ [-Werror=nested-externs]
cc1: all warnings being treated as errors

After applying the attached patch everything compiles.
Now, I did not fix the difference between GST_DISABLE_TRACE
and GST_DISABLE_ALLOC_TRACE as it is not strictly required
to fix the problem at hand.
Comment 1 Wim Taymans 2012-05-11 11:40:36 UTC
commit 1c82367a0ed35fbcd031e98095cfce3d421d735a
Author: Sebastian Rasmussen <sebrn@axis.com>
Date:   Wed May 9 14:22:20 2012 +0200

    gst: Only include init/deinit of alloc tracing when enabled
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=675806