gst: Only include init/deinit of alloc tracing when enabled

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=675806