gst/gst.c
@@ -635,7 +635,9 @@ init_post (GOptionContext * context, GOptionGroup * group, gpointer data,
   llf = G_LOG_LEVEL_CRITICAL | G_LOG_LEVEL_ERROR | G_LOG_FLAG_FATAL;
   g_log_set_handler (g_log_domain_gstreamer, llf, debug_log_handler, NULL);
 
+#ifndef GST_DISABLE_TRACE
   _priv_gst_alloc_trace_initialize ();
+#endif
 
   _priv_gst_mini_object_initialize ();
   _priv_gst_quarks_initialize ();
@@ -1011,7 +1013,9 @@ gst_deinit (void)
 
   _priv_gst_registry_cleanup ();
 
+#ifndef GST_DISABLE_TRACE
   _priv_gst_alloc_trace_deinit ();
+#endif
 
   g_type_class_unref (g_type_class_peek (gst_object_get_type ()));
   g_type_class_unref (g_type_class_peek (gst_pad_get_type ()));
